banking.ebnf
letter         ::= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" |
                   "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" |
                   "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" |
                   "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" ;
digit          ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
number         ::= digit, {digit} ;
account_number ::= letter, letter, digit, {digit, digit, digit, digit, digit, digit} ;
amount         ::= digit, {digit} ;
balance        ::= digit, {digit}, ".", digit, digit ;
name           ::= letter, {letter} ;
exit           ::= "EXIT" ;
balance        ::= "BALANCE", "OF", account_number ;
withdraw       ::= "WITHDRAW", amount, "FROM", account_number ;
deposit        ::= "DEPOSIT", amount, "TO", account_number ;
create_account ::= "CREATE", "ACCOUNT", name, ",", name, ",", account_number, ",", balance ;
statement      ::= create_account | deposit | withdraw | balance | exit ;
program        ::= statement, {statement} ;
